# ENT

./: Cargo.toml  LICENSE  README.md
benches/: legendre.rs  primality.rs  rand.rs  spanish  titanic_prime.rs
examples/: prime_proof.rs  rsa.rs
src/: arithmetic.rs  byte.rs  data.rs  eightbytes.rs  fjprime32.rs  fjprime64.rs  fourbytes.rs  lib.rs  main.rs  montgomery.rs  nterror  ntrait.rs  primes.rs  primitive.rs  result.rs  sieve.rs  sixteenbytes.rs  structs.rs  traits.rs  twobytes.rs
src/arithmetic/: conversion.rs  inlineops.rs  mpz.rs  mpz_arith.rs  mpz_ent.rs  mpz_prime.rs  muldiv.rs  sign.rs  sixteenbytes.rs  sliceops.rs
src/data/: hashtable.rs  nt_data.rs  primes.rs
src/primitive/: byte.rs  eightbytes.rs  factorprim.rs  fourbytes.rs  montprim.rs  pointer.rs  promotion.rs  sieve.rs  signednt.rs  sixteenbytes.rs  twobytes.rs
tests/: README.md  arithtest.rs  enttest.rs  simple_arith.rs  simple_ent.rs  simple_gcd.rs  simple_residue.rs  simple_root.rs  strong_arith.rs  strong_ent.rs  strong_prime.rs
verification/: README.md  hash  test
