[package]
name = "number-theory"
version = "0.0.5"
edition = "2021"
authors = ["J.A Sory jasory@rust-cas.org"]
description = "Fast primality, factorization and elementary number theory for primitive types"
keywords = ["primes", "factor", "number-theory", "bignum"]
homepage   = "https://rust-cas.org"
repository = "https://github.com/JASory/ENT"
license    = "MIT"
categories = ["algorithms", "mathematics"]
readme      = "Readme.md"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
