[package]
name = "number-theory"
version = "0.0.12"
edition = "2021"
authors = ["J.A Sory jasory@rust-cas.org"]
description = "Fast primality, factorization and elementary number theory for integer types"
keywords = ["primes", "factor", "number-theory", "bignum"]
homepage   = "https://rust-cas.org"
repository = "https://github.com/JASory/ENT"
license    = "MIT"
categories = ["algorithms", "mathematics"]
readme      = "README.md"



[[bench]]
name = "rand"
harness = false

[[bench]]
name = "primality"
harness = false

[[bench]]
name = "titanic_prime"
harness = false

[profile.test] #Strong tests require high optimization to execute in reasonable time 
opt-level = 2

[dependencies]

[features]
parallel = []  
#default = ["parallel"]

